# pinocchio-fundraiser

./: Cargo.toml
deploy/: pinocchhio-fundraiser.json  pinocchio_escrow-keypair.json  pinocchio_fundraiser-keypair.json
src/: constants.rs  lib.rs
src/instructions/: checker.rs  contiribute.rs  initialize.rs  mod.rs  refund.rs
src/state/: contribution.rs  fundraiser.rs  mod.rs
tests/common/: fixtures.rs  instructions.rs  mod.rs  setup.rs  utils.rs
tests/integration/: mod.rs
