[package]
name = "pinocchio-fundraiser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "pinocchio_fundraiser"

[dependencies]
wincode = { version = "0.4.5", features = ["derive"] }
pinocchio = "0.10.2"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-log = "0.5.1"
pinocchio-associated-token-account = "0.3.0"
pinocchio-pubkey = "0.3.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-sdk = "3.0.0"
litesvm-token = "0.10.0"
spl-associated-token-account = "8.0.0"
